[tool.poetry]
name = "Od.dyn Backend"
version = "2.0.0-beta1"
description = "powered by Replit"
authors = ["Luqaska"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"